--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jobprotal",
   "version": "1.0.0",
-  "description": "Jobportal application with 2 react app amd and 1 node app",
+  "description": "Jobportal application using truffle",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
